# glorpen-watching

./: .gitignore  Dockerfile  setup.cfg
src/glorpen/watching/: app.py  config.py  cron.py  model.py  scrappers.py  trello_db.py
src/gwatching/: anime.py  app.py  config.py  model.py  scrappers.py  trello_db.py
