[metadata]
name = glorpen-watching
version = 1.0.0
author = Arkadiusz Dzięgiel
author_email = arkadiusz.dziegiel@glorpen.pl
description = Loads, validates and normalizes configuration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glorpen/glorpen-watching
project_urls =
    Bug Tracker = https://github.com/glorpen/glorpen-watching/issues
classifiers =
    "Development Status :: 5 - Production/Stable"
    "Intended Audience :: Developers"
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
    "Programming Language :: Python :: 3"
    "Programming Language :: Python :: 3.10"
[options]
package_dir =
    = src
packages = glorpen.watching
python_requires = >=3.10
install_requires = more_itertools
                   prompt_toolkit>=3,<4

[options.packages.find]
where = src

[options.extras_require]
tests = pytest>=7,<8

[options.entry_points]
console_scripts =
    gwatching = glorpen.watching.app:main
