[metadata]
name = glorpen-watching
version = 1.0.0
author = Arkadiusz Dzięgiel
author_email = arkadiusz.dziegiel@glorpen.pl
description = Track your shows with Trello.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glorpen/glorpen-watching
project_urls =
    Bug Tracker = https://github.com/glorpen/glorpen-watching/issues
classifiers =
    "Development Status :: 5 - Production/Stable"
    "Intended Audience :: Developers"
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
    "Programming Language :: Python :: 3"
    "Programming Language :: Python :: 3.10"
[options]
package_dir =
    = src
packages = glorpen.watching
python_requires = >=3.10
install_requires = more_itertools>8,<9
                   prompt_toolkit>=3,<4
                   pyyaml
                   requests
                   requests-oauthlib>=1.3.1,<2
                   lxml>4,<5
                   pillow>9,<10
                   tqdm


[options.packages.find]
where = src

[options.extras_require]
tests = pytest>=7,<8
cron = schedule>=1.1.0,<2
       pyparsing

[options.entry_points]
console_scripts =
    gwatching = glorpen.watching.app:main
